2010-02-07 Nicolas Roard <nicolas@roard.com>
	Added some support to generate an application bundle
	Added basic communication with Gorm

2010-02-07 Nicolas Roard <nicolas@roard.com>
	Lots of fixes for CoreObject support, history slider functional.

2009-05-15 Nicolas Roard <nicolas@roard.com>
	Gorm updates and resize fix for the pluggable contentview.
	Added an history slider and corresponding methods.

2009-05-15 Nicolas Roard <nicolas@roard.com>
	More refactoring and addition of CO versioning

2009-05-15 Nicolas Roard <nicolas@roard.com>
	Refactoring and cleaning to prepare the code for CO

2009-05-14 Nicolas Roard <nicolas@roard.com>
	Remove the instance/class switch and put all methods in the same pane
	
2009-05-14 Nicolas Roard <nicolas@roard.com>
	Add a "Properties" category in the browser

2009-05-14 Nicolas Roard <nicolas@roard.com>
	Fix saving and loading of class methods

2009-05-13 Nicolas Roard <nicolas@roard.com>
	Add IDE.[hm] forgotten before :)

2009-05-13 Nicolas Roard <nicolas@roard.com>
	Add support for class/instance methods in Controller
	* Modified the Browser.gorm to deal with the class/instance switch
	* Added a switch method in Controller
	* Modified ModelClass to output class methods correctly

2009-05-13 Nicolas Roard <nicolas@roard.com>
	Add support for class methods and categories in ModelClass

2009-05-13 Nicolas Roard <nicolas@roard.com>
	Add an IDE class and refactor Controller to use it

2009-05-12 Nicolas Roard <nicolas@roard.com>
        Add some comments in the Controller
	Small modif in the gorm file to better center

2009-01-31 Nicolas Roard <nicolas@roard.com>
	Fix some saving issues -- you can now edit and save files.
	* Use a pretty-printed AST for the output file, but build
	  the AST from the ModelClass -representation
	* Fixed some compilation warnings
	* Added a mainWindow outlet
	* Switched to 12pt default size font

2009-01-31 Nicolas Roard <nicolas@roard.com>